--- a/ansible/group_vars/lab/lab.yml
+++ b/ansible/group_vars/lab/lab.yml
@@ -6,7 +6,7 @@
 ntp_servers: ['10.224.13.178']
 
 # syslog variables
-syslog_servers: []
+syslog_servers: ['10.0.0.5', '10.0.0.6']
 
 # dns variables
 dns_servers: ['10.0.0.5', '10.0.0.6']
