Added SNMP test case for Transceiver & Sensor MIB
Signed-off-by: stepanb <stepanb@mellanox.com>

--- a/ansible/roles/test/tasks/snmp.yml
+++ b/ansible/roles/test/tasks/snmp.yml
@@ -8,18 +8,21 @@
   assert: { that: "ansible_sysname == '{{ inventory_hostname }}'" }
 
 - block:
-    - name: inlcude snmp cpu test
-      include: roles/test/tasks/snmp/cpu.yml
+#    - name: inlcude snmp cpu test
+#      include: roles/test/tasks/snmp/cpu.yml
 
-    - name: include snmp interfaces test
-      include: roles/test/tasks/snmp/interfaces.yml
+    - name: inlcude snmp physical table test
+      include: roles/test/tasks/snmp/phys_table.yml
 
-    - name: include snmp pfc counter test
-      include: roles/test/tasks/snmp/pfc_counters.yml
+#    - name: include snmp interfaces test
+#      include: roles/test/tasks/snmp/interfaces.yml
 
-    - name: include snmp queues test
-      include: roles/test/tasks/snmp/queues.yml
+#    - name: include snmp pfc counter test
+#      include: roles/test/tasks/snmp/pfc_counters.yml
 
-    - name: include snmp PSU test
-      include: roles/test/tasks/snmp/psu.yml
+#    - name: include snmp queues test
+#      include: roles/test/tasks/snmp/queues.yml
+
+#    - name: include snmp PSU test
+#      include: roles/test/tasks/snmp/psu.yml
   when: testcase_name is defined
